Attractions/Font Update
Biggest changes are in the attraction pages and then the font choice for the website.

--- a/attractions.html
+++ b/attractions.html
@@ -10,7 +10,7 @@
 
     <body>
          <!-- Header -->
-         <nav style="background-color: rgba(255,255,255,1)">
+         <nav class="solid-header">
             <div class="logo-title-container">
                 <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
             </div>
@@ -32,7 +32,18 @@
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="availability.html">Availability</a></li>
-                <li><a href="attractions.html">Attractions</a></li>
+                <li><a href="attractions.html">Attractions <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
+                    <ul>
+                        <li><a href="atv.html">ATV</a></li>
+                        <li><a href="hiking.html">Hiking</a></li>
+                        <li><a href="rockClimbing.html">Rock Climbing</a></li>
+                        <li><a href="snowmobiling.html">Snowmobiling</a></li>
+                        <li><a href="mtnBiking.html">Mtn Biking</a></li>
+                        <li><a href="history.html">History</a></li>
+                        <li><a href="sightseeing.html">Sightseeing</a></li>
+                        <li><a href="otherAttractions.html">Other</a></li>
+                    </ul>
+                </li>
                 <li><a href="map.html">Map</a></li>
                 <li id="menu-icon" class="menu-trigger"><a><i class="fas fa-bars menu-icon"></i></a></li>
                 <li id="menu-close-icon" class="menu-close"><a><i class="fas fa-times close-icon"></i></a></li>
@@ -54,6 +65,7 @@
                     </li>
                     <li  class="menu-page-link"><a id="cabins-menu">Cabins <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
                         <ul id="cabin-sub-menu-pages"> 
+                            <li><a href="cabinOverview.html">Cabins Overview</a></li>
                             <li><a href="mainCabin.html">Main Cabin</a></li>
                             <li><a href="guestCabin.html">Guest Cabin</a></li>
                             <li><a href="otherEvents.html">Other Events</a></li>
@@ -74,7 +86,7 @@
 
         <div class="overview-container">
             <h1>Area Attractions</h1>
-            <p>The beautiful Sanpete valley has so much to offer, from the world famous Arapeen trail system to a long, rich history! Here we've compiled a short list of our favorite activities. But really, you can't go wrong with any of these activites, so follow the links to learn more about what this area has to offer and get started on your next vacation!</p>
+            <p>The beautiful Sanpete valley has so much to offer, from the world famous Arapeen trail system to its long, rich history! We've compiled a short list of our favorite activities below to get you started on planning your trip. But really, you can't go wrong with any of these activites, so follow the links to learn more about what this area has to offer and get started on your next vacation!</p>
 
             <!--ATV-->
             <div class="attractions-overview-container">
@@ -83,7 +95,7 @@
                 </div>
                 <div class="attractions-overview-text">
                     <a href="atv.html"><h3>ATV</h3></a>
-                    <p>Being minutes from the world famous Arapeen trail system, you have over 350,000 acres of interconnecting, beautiful mountain trails. So from your motorcycle to side-by-side, bring your ATV an enjoy the pristine landscape Sanpete Valley has to offer.</p>
+                    <p>Being minutes from the world famous Arapeen trail system, you have over 350,000 acres of interconnecting, beautiful mountain trails. So from your motorcycle to side-by-side, bring your ATV and enjoy the pristine landscape Sanpete Valley has to offer.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="atv.html"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -111,7 +123,7 @@
                 </div>
                 <div class="attractions-overview-text">
                     <a href="rockClimbing.html"><h3>Rock Climbing</h3></a>
-                    <p>The cobblestone climbing of Maple Canyon is just minutes away from our cabins. Climbers from around the world come to test their skills on Maple Canyon’s unique cobblestone cliffs. With hundreds of climbs, it's easy to find a climb for everyone from novice to expert! </p>
+                    <p>The renowned climbing of Maple Canyon is just minutes away from our cabins. Climbers from around the world come to test their skills on Maple Canyon’s unique cobblestone cliffs. With hundreds of climbs, it's easy to find a climb for everyone from novice to Alex Honnold!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="rockClimbing.html"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -125,7 +137,7 @@
                 </div>
                 <div class="attractions-overview-text">
                     <a href="snowmobiling.html"><h3>Snowmobiling</h3></a>
-                    <p>Countless miles of untouched powder and bowls that offer some of the best backcountry mountain sledding in the state. SnoWest magazine wrote, "Boondocker’s Heaven- If there was ever a place on earth that could lay claim to that title, it would have to be Utah’s Sanpete County."</p>
+                    <p>"Boondocker’s Heaven- If there was ever a place on earth that could lay claim to that title, it would have to be Utah’s Sanpete County" <em>-SnoWest magazine</em>. Enjoy countless miles of untouched powder and bowls that offer some of the best backcountry snowmobiling in the state!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="snowmobiling.html"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -139,7 +151,7 @@
                 </div>
                 <div class="attractions-overview-text">
                     <a href="mtnBiking.html"><h3>Mountain Biking</h3></a>
-                    <p>Have you ever rode a mountain bike over 50 miles at an altitude of nearly 10,000 feet? Skyline Drive has breathtaking views that will Expand your outlook on life. This area offers many single or multi-day adventures for you to enjoy on your bike.</p>
+                    <p>Have you ever rode a mountain bike over 50 miles at an altitude of nearly 10,000 feet? Skyline Drive has breathtaking views that will expand your outlook on life. Sanpete County offers many single or multi-day adventures for you to enjoy on your bike.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="mtnBiking.html"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -153,7 +165,7 @@
                 </div>
                 <div class="attractions-overview-text">
                     <a href="history.html"><h3>History</h3></a>
-                    <p>Sanpete’s Heritage is prevalent today with many buildings built in the 1800’s. Native American sites, historic buildings, and cultural sites draw history and culture buffs to this area. Forbes listed neighboring town Spring City, UT as one of the top prettiest towns in America.</p>
+                    <p>Sanpete’s Heritage is prevalent today with many buildings built in the 1800’s. Native American sites, historic buildings, and cultural sites draw history and culture buffs to this area. Spring City (listed as one of the prettiest towns in America by Forbes) is a must see for its history!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="history.html"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -167,7 +179,7 @@
                 </div>
                 <div class="attractions-overview-text">
                     <a href="sightseeing.html"><h3>Sightseeing</h3></a>
-                    <p>Sanpete has so much to offer and see. With hundreds of thousands of acres of gorgeous mountain forests, there are more scenic, panoramic views than you can take pictures of! So make sure to clear out your phone storage so you have room for the photos!</p>
+                    <p>With hundreds of thousands of acres of gorgeous mountain forests, there are more scenic and panoramic views than you can take pictures of! So make sure to clear out your phone storage because we guarantee you will be filling it up with pictures here!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="sightseeing.html"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -181,7 +193,7 @@
                 </div>
                 <div class="attractions-overview-text">
                     <a href="otherAttractions.html"><h3>And So Much More</h3></a>
-                    <p>From state parks to boating and snowkiting, Sanpete valley is an outdoor paradise! There is something here for everyone, including a full scale replica of a nearly fully intact Columbian mammoth that was unearthed here in 1988, art museums, and many more family-fun activities!</p>
+                    <p>From state parks to boating and snowkiting, Sanpete valley is an outdoor paradise! There is something here for everyone, including a nearly fully intact Columbian mammoth that was unearthed here in 1988, aquatic centers, and old-fashioned drive-in movies with burgers and fries.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="otherAttractions.html"><p>Click here</p><p>for more</p><p>information</p></a>
