--- a/atv.html
+++ b/atv.html
@@ -10,7 +10,7 @@
 
     <body>
          <!-- Header -->
-         <nav style="background-color: rgba(255,255,255,1)">
+         <nav class="solid-header">
             <div class="logo-title-container">
                 <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
             </div>
@@ -32,7 +32,18 @@
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="availability.html">Availability</a></li>
-                <li><a href="attractions.html">Attractions</a></li>
+                <li><a href="attractions.html">Attractions <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
+                    <ul>
+                        <li><a href="atv.html">ATV</a></li>
+                        <li><a href="hiking.html">Hiking</a></li>
+                        <li><a href="rockClimbing.html">Rock Climbing</a></li>
+                        <li><a href="snowmobiling.html">Snowmobiling</a></li>
+                        <li><a href="mtnBiking.html">Mtn Biking</a></li>
+                        <li><a href="history.html">History</a></li>
+                        <li><a href="sightseeing.html">Sightseeing</a></li>
+                        <li><a href="otherAttractions.html">Other</a></li>
+                    </ul>
+                </li>
                 <li><a href="map.html">Map</a></li>
                 <li id="menu-icon" class="menu-trigger"><a><i class="fas fa-bars menu-icon"></i></a></li>
                 <li id="menu-close-icon" class="menu-close"><a><i class="fas fa-times close-icon"></i></a></li>
@@ -54,6 +65,7 @@
                     </li>
                     <li  class="menu-page-link"><a id="cabins-menu">Cabins <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
                         <ul id="cabin-sub-menu-pages"> 
+                            <li><a href="cabinOverview.html">Cabins Overview</a></li>
                             <li><a href="mainCabin.html">Main Cabin</a></li>
                             <li><a href="guestCabin.html">Guest Cabin</a></li>
                             <li><a href="otherEvents.html">Other Events</a></li>
@@ -74,7 +86,7 @@
 
         <div class="overview-container">
             <h1>ATV Trails</h1>
-            <p>Named after the Ute Indian Chief, the famed Arapeen trail system boasts over 350,000 acres of beautiful, pristine ATV trails for ATV's of all sizes. The towns of Sanpete are known as "ATV friendly", meaning you can ride through town (except for on highway 89) on your ATV, giving you the convenience of starting and ending from your front doorstep! Read more about our recommended ATV trails below, or if you want more trails to look at, we recommend also looking at this <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank">free digital map</a> or looking at more free or purchasable trail maps at <a href="http://sanpete.com/pages/atv_map" target="_blank">Sanpete.com</a>.</p>
+            <p>Named after the Ute Indian Chief, the famed Arapeen trail system boasts over 350,000 acres of beautiful, pristine ATV trails for ATV's of all sizes. The towns in Sanpete are known as "ATV friendly", meaning you can ride through town (except for on highway 89) on your ATV, giving you the convenience of starting and ending from your front doorstep! Read more about our recommended ATV trails below, or if you want more trails to look at, we recommend also looking at this <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank">free digital map</a> or looking at more free and purchasable trail maps at <a href="http://sanpete.com/pages/atv_map" target="_blank">Sanpete.com</a>.</p>
 
             <!--Spring City-->
             <div class="attractions-overview-container">
@@ -95,7 +107,9 @@
                 <li><a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank">Free OHV Trail Map Download</a></li>
                 <li><a href="http://sanpete.com/pages/atv_map" target="_blank">Sanpete.com ATV Maps</a></li>
                 <li><a href="http://sanpete.com/pages/atv" target="_blank">Sanpete.com ATV Info</a></li>
-                <li><a href="https://www.riderplanet-usa.com/atv/trails/info/utah_09316/ride_27ff.htm" target="_blank">Rider Planet</a></li>
+                <li><a href="https://www.fs.usda.gov/activity/mantilasal/recreation/ohv/?recid=72816&actid=93" target="_blank">Forest Service</li>
+                <li><a href="https://www.fs.usda.gov/activity/mantilasal/recreation/ohv/?recid=72816&actid=93" target="_blank">Rider Planet</a></li>
+                <li>Additional trail maps available at our cabins!</li>
             </ul>
 
         </div>
