--- a/cabinOverview.html
+++ b/cabinOverview.html
@@ -10,7 +10,7 @@
 
     <body>
          <!-- Header -->
-         <nav style="background-color: rgba(255,255,255,1)">
+         <nav class="solid-header">
             <div class="logo-title-container">
                 <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
             </div>
@@ -32,7 +32,18 @@
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="availability.html">Availability</a></li>
-                <li><a href="attractions.html">Attractions</a></li>
+                <li><a href="attractions.html">Attractions <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
+                    <ul>
+                        <li><a href="atv.html">ATV</a></li>
+                        <li><a href="hiking.html">Hiking</a></li>
+                        <li><a href="rockClimbing.html">Rock Climbing</a></li>
+                        <li><a href="snowmobiling.html">Snowmobiling</a></li>
+                        <li><a href="mtnBiking.html">Mtn Biking</a></li>
+                        <li><a href="history.html">History</a></li>
+                        <li><a href="sightseeing.html">Sightseeing</a></li>
+                        <li><a href="otherAttractions.html">Other</a></li>
+                    </ul>
+                </li>
                 <li><a href="map.html">Map</a></li>
                 <li id="menu-icon" class="menu-trigger"><a><i class="fas fa-bars menu-icon"></i></a></li>
                 <li id="menu-close-icon" class="menu-close"><a><i class="fas fa-times close-icon"></i></a></li>
@@ -54,6 +65,7 @@
                     </li>
                     <li  class="menu-page-link"><a id="cabins-menu">Cabins <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
                         <ul id="cabin-sub-menu-pages"> 
+                            <li><a href="cabinOverview.html">Cabins Overview</a></li>
                             <li><a href="mainCabin.html">Main Cabin</a></li>
                             <li><a href="guestCabin.html">Guest Cabin</a></li>
                             <li><a href="otherEvents.html">Other Events</a></li>
@@ -75,7 +87,7 @@
 
         <div class="overview-container">
             <h1>Country Cabins on Sheldon R. Larson Ranch</h1>
-            <p>We have two beautiful country-style cabins available for rent three miles west of Ephraim, Utah. Our cabins are situated minutes from the famous Arapeen trail system with some of the best ATV and snowmobile routes this side of Florida! We aim to ensure that our cabins provide you with everything you need including all the essentials and amenities of your own home so that you feel at home the minute you walk through the door. So no matter you do, we know you won't be disappointed with our country-style cabins. Feel free to contact us with any questions or even if you're just looking for recommendations for the area. We are happy to help! </p>
+            <p>We have two beautiful country-style cabins available for rent three miles west of Ephraim, Utah. Our cabins are situated minutes from the world famous Arapeen trail system with some of the best ATV and snowmobile routes this side of Florida! You'll also find Maple Canyon, renowned for it's unique cobblestone clifss for rock climbing, only miles away. We aim to ensure that our cabins provide you with everything you need including all the essentials and amenities of your own home so that you feel at home the minute you walk through the door. So no matter what you do, we know you won't be disappointed with our country-style cabins. Feel free to contact us with any questions or even if you're just looking for recommendations for the area. We are always happy to help! </p>
 
             <!--Main Cabin-->
             <div class="cabin-overview-cabins-container">
