--- a/hiking.html
+++ b/hiking.html
@@ -10,7 +10,7 @@
 
     <body>
          <!-- Header -->
-         <nav style="background-color: rgba(255,255,255,1)">
+         <nav class="solid-header">
             <div class="logo-title-container">
                 <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
             </div>
@@ -32,7 +32,18 @@
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="availability.html">Availability</a></li>
-                <li><a href="attractions.html">Attractions</a></li>
+                <li><a href="attractions.html">Attractions <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
+                    <ul>
+                        <li><a href="atv.html">ATV</a></li>
+                        <li><a href="hiking.html">Hiking</a></li>
+                        <li><a href="rockClimbing.html">Rock Climbing</a></li>
+                        <li><a href="snowmobiling.html">Snowmobiling</a></li>
+                        <li><a href="mtnBiking.html">Mtn Biking</a></li>
+                        <li><a href="history.html">History</a></li>
+                        <li><a href="sightseeing.html">Sightseeing</a></li>
+                        <li><a href="otherAttractions.html">Other</a></li>
+                    </ul>
+                </li>
                 <li><a href="map.html">Map</a></li>
                 <li id="menu-icon" class="menu-trigger"><a><i class="fas fa-bars menu-icon"></i></a></li>
                 <li id="menu-close-icon" class="menu-close"><a><i class="fas fa-times close-icon"></i></a></li>
@@ -47,6 +58,7 @@
                     <li class="menu-page-link"><a href="bookNow.html">Book Now</a></li>
                     <li class="menu-page-link"><a id="about-us">About Us <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
                         <ul id="about-us-sub-menu-pages">
+                            <li><a href="cabinOverview.html">Cabins Overview</a></li>
                             <li><a href="overview.html">Overview</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                             <li><a href="reviews.html">Reviews</a></li>
@@ -74,7 +86,7 @@
 
         <div class="overview-container">
             <h1>Hiking</h1>
-            <p>There are miles and miles of hiking trails throughout the gorgeous Wasatch Mountain Range. Whether it's to an arch, waterfall, or jaw-dropping panoramic views, there's a hike here for you! From easy to strenous, we've listed our top recommended hikes in the area! Read more about our recommended hikes below, or if you want more hikes, we recommend also looking at <a href="https://www.alltrails.com/explore?b_tl_lat=39.8992015115692&b_tl_lng=-112.88177490234375&b_br_lat=38.81403111409755&b_br_lng=-110.291748046875" target="_blank">all trails</a> or <a href="https://www.hikingproject.com/directory/8010492/salt-lake-city-and-wasatch-front" target="_blank">hiking project</a>.</p>
+            <p>There are miles and miles of hiking trails throughout the gorgeous Wasatch Mountain Range. Whether it's to an arch, waterfall, or jaw-dropping panoramic views, there's a hike here for you! From easy to strenous and short to long, we've listed our top recommended hikes in the area! Read more about our recommended hikes below, or if you want more hikes, we recommend also looking at <a href="https://www.alltrails.com/explore?b_tl_lat=39.8992015115692&b_tl_lng=-112.88177490234375&b_br_lat=38.81403111409755&b_br_lng=-110.291748046875" target="_blank">all trails</a> or <a href="https://www.hikingproject.com/directory/8010492/salt-lake-city-and-wasatch-front" target="_blank">hiking project</a>.</p>
 
             <!--Maple Canyon Loop-->
             <div class="attractions-overview-container">
@@ -84,7 +96,7 @@
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.alltrails.com/trail/us/utah/maple-canyon-loop-trail--3" target="_blank"><h3>Maple Canyon Loop Trail</h3></a>
                     <p><i class="fas fa-route hiking-icon-left"></i> 2.7 miles<i class="fas fa-mountain hiking-icon"></i> 1,299 feet <span class="hiking-difficulty moderate-hike">&#9632;</span> Moderate</p>
-                    <p>Clear out your phone storage for this hike because I guarantee you'll fill it up with pictures! This hike has it all, an arch, 360&#176; panoramic views, and a cave. This hike is a must!</p>
+                    <p>Clear out your phone storage for this hike because I guarantee you'll fill it up with pictures! This hike has it all, an arch, 360&#176; panoramic views, and a cave. This hike is a must do!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="https://www.alltrails.com/trail/us/utah/maple-canyon-loop-trail--3" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -99,7 +111,7 @@
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.alltrails.com/trail/us/utah/maples-box-canyon-trail" target="_blank"><h3>Box Canyon Trail</h3></a>
                     <p><i class="fas fa-route hiking-icon-left"></i> 1.2 miles<i class="fas fa-mountain hiking-icon"></i> 462 feet <span class="hiking-difficulty moderate-hike">&#9632;</span> Moderate</p>
-                    <p>A unique cobblestone slot canyon with a waterfall and a few boulders to scramble over make this hike unbelievably fun! This is a great short hike to combine with the Maple Canyon Loop Trail nearby.</p>
+                    <p>A unique cobblestone slot canyon with a waterfall and a few boulders to scramble over make this hike unbelievably fun! This is a great short hike to combine with the Maple Canyon Loop Trail.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="https://www.alltrails.com/trail/us/utah/maples-box-canyon-trail" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -114,7 +126,7 @@
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.alltrails.com/trail/us/utah/south-tent-mountain-summit-from-skyline-drive" target="_blank"><h3>South Tent Mtn Summit</h3></a>
                     <p><i class="fas fa-route hiking-icon-left"></i> 4.2 miles<i class="fas fa-mountain hiking-icon"></i> 1,059 feet <span class="hiking-difficulty moderate-hike">&#9632;</span> Moderate</p>
-                    <p>South Tent Mtn is the high point in Sanpete county and makes for a gorgeous hike with views of the entire valley! You can make this into a loop with North Tent Mtn for a 7 mile hike or even shorten in to 2 miles!</p>
+                    <p>South Tent Mtn is the high point in Sanpete county and makes for a gorgeous hike with views of the entire valley! You can turn this into a 7 mile loop with North Tent Mtn or into an even shorter 2 mile hike!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="https://www.alltrails.com/trail/us/utah/south-tent-mountain-summit-from-skyline-drive" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -144,7 +156,7 @@
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.alltrails.com/trail/us/utah/milky-falls" target="_blank"><h3>Milky Falls Trail</h3></a>
                     <p><i class="fas fa-route hiking-icon-left"></i> 0.2 miles<i class="fas fa-mountain hiking-icon"></i> 36 feet <span class="hiking-difficulty easy-hike">&#9679;</span> Easy</p>
-                    <p>This is a very easy hike with a gorgeous cascading waterfall. I recommend combining this hike with several ATV or mountain biking trails in the area.</p>
+                    <p>This is a very easy hike with a gorgeous cascading waterfall in some of the prettiest parts of the mountain. I recommend combining this hike with several ATV or mountain biking trails in the area.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="https://www.alltrails.com/trail/us/utah/milky-falls" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -155,13 +167,13 @@
             <ul>
                 <li><a href="https://www.alltrails.com/explore?b_tl_lat=39.8992015115692&b_tl_lng=-112.88177490234375&b_br_lat=38.81403111409755&b_br_lng=-110.291748046875" target="_blank">All Trails</a></li>
                 <li><a href="https://www.hikingproject.com/directory/8010492/salt-lake-city-and-wasatch-front" target="_blank">Hiking Project</a></li>
+                <li><a href="https://www.fs.usda.gov/activity/mantilasal/recreation/hiking/?recid=72816&actid=50" target="_blank">Forest Service</a></li>
                 <li><a href="https://www.heraldextra.com/sanpete-county/special-section/rec-guide/explore-sanpete-s-numerous-backcountry-trails/article_3e6a51ad-e6e0-5577-b1c5-bbf169cf4085.html" target="_blank">Herald Extra</a></li>
                 <li><a href="https://www.anyplaceamerica.com/directory/ut/sanpete-county-49039/trails/" target="_blank">AnyPlaceAmerica</a></li>
                 <li><a href="http://www.girlonahike.com/search/label/Central%20Utah" target="_blank">Girl On A Hike</a></li>
             </ul>
-
+            
         </div>
-
 
         <footer>
             <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.facebook.com/sheldonrlarsonranch/" target="_blank"><img src="images/icons/facebook.svg" height="20" width="20" alt="link to our facebook page"/></a>
