--- a/map.html
+++ b/map.html
@@ -10,7 +10,7 @@
 
     <body id="homepage"> 
         <!-- Header -->
-        <nav>
+        <nav class="opaque-header">
             <div class="logo-title-container">
                 <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
             </div>
@@ -33,6 +33,18 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="availability.html">Availability</a></li>
                 <li><a href="attractions.html">Attractions</a></li>
+                <li><a href="attractions.html">Attractions <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
+                    <ul>
+                        <li><a href="atv.html">ATV</a></li>
+                        <li><a href="hiking.html">Hiking</a></li>
+                        <li><a href="rockClimbing.html">Rock Climbing</a></li>
+                        <li><a href="snowmobiling.html">Snowmobiling</a></li>
+                        <li><a href="mtnBiking.html">Mtn Biking</a></li>
+                        <li><a href="history.html">History</a></li>
+                        <li><a href="sightseeing.html">Sightseeing</a></li>
+                        <li><a href="otherAttractions.html">Other</a></li>
+                    </ul>
+                </li>
                 <li><a href="map.html">Map</a></li>
                 <li id="menu-icon" class="menu-trigger"><a><i class="fas fa-bars menu-icon"></i></a></li>
                 <li id="menu-close-icon" class="menu-close"><a><i class="fa fas-times close-icon"></i></a></li>
@@ -54,6 +66,7 @@
                     </li>
                     <li  class="menu-page-link"><a id="cabins-menu">Cabins <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
                         <ul id="cabin-sub-menu-pages"> 
+                            <li><a href="cabinOverview.html">Cabins Overview</a></li>
                             <li><a href="mainCabin.html">Main Cabin</a></li>
                             <li><a href="guestCabin.html">Guest Cabin</a></li>
                             <li><a href="otherEvents.html">Other Events</a></li>
@@ -77,10 +90,10 @@
         <div id="map-overlay"></div>
         
         <div id="map-explanation">
-            <p>&#8210; This map contains a list of our favorite places and activites around Sanpete County. This list includes everything from favorite restaraunts to favorite trails. Simply zoom in/out and move around the map to see where everything is for you to plan your trip.</p>
-            <p>&#8210; Click on any of the icons on the map to pull in a sidebar with more details and directions. Sometimes we've also linked external websites that provide all the information you could ever hope for concerning the activity.</p>
+            <p>&#8210; This map contains a list of our favorite places and activites around Sanpete County. This list includes everything from favorite restaraunts to favorite trails. Simply zoom in/out and move around the map to see where everything is for you to plan your trip. (On touch screen devices you can zoom in by pinching two fingers together, and you can pan across the map by using two fingers)</p>
+            <p>&#8210; Click on any of the icons on the map to pull in a sidebar with more details and directions. In many cases we've also linked external websites that provide all the information you could ever hope for concerning the desired activity.</p>
             <p>&#8210; The top bar has several icons. The top left icon will open or close the sidebar. Open the sidebar to see a comprehensive list of all the activities and categories.</p>
-            <p>&#8210; Clicking the star icon will save the map to your own personal google maps account. That way you can access it from your google maps mobile app or your own google maps account! (To see it after you've starred this map, go to maps.google.com. Click the 'menu' icon, go to 'Your Places', and then click on 'Maps' and you should see it labeled as "Nearby Attractions - Sheldon R. Larson Ranch")</p>
+            <p>&#8210; Clicking the star icon will save the map to your own personal google maps account. That way you can access it from your google maps mobile app or your own google maps account on your computer! (To see it after you've starred this map, go to maps.google.com or your mobile google maps app. Click the 'menu' icon, go to 'Your Places', and then click on 'Maps' and you should see it labeled as "Nearby Attractions - Sheldon R. Larson Ranch")</p>
             <p>&#8210; The next icon over from the star is the 'share' icon. This allows you to share this map with others via social media or email, or even embed it onto your own website! Finally, the top right icon opens this map into google maps itself so that you can view it in full screen!</p>
             <p>&#8210; As always, let us know if you have any questions or want any other recommendations!</p>
             <p>&#8210; (Click anywhere outside of this box to go back to the map)</p>
