--- a/mtnBiking.html
+++ b/mtnBiking.html
@@ -10,7 +10,7 @@
 
     <body>
          <!-- Header -->
-         <nav style="background-color: rgba(255,255,255,1)">
+         <nav class="solid-header">
             <div class="logo-title-container">
                 <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
             </div>
@@ -32,7 +32,18 @@
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="availability.html">Availability</a></li>
-                <li><a href="attractions.html">Attractions</a></li>
+                <li><a href="attractions.html">Attractions <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
+                    <ul>
+                        <li><a href="atv.html">ATV</a></li>
+                        <li><a href="hiking.html">Hiking</a></li>
+                        <li><a href="rockClimbing.html">Rock Climbing</a></li>
+                        <li><a href="snowmobiling.html">Snowmobiling</a></li>
+                        <li><a href="mtnBiking.html">Mtn Biking</a></li>
+                        <li><a href="history.html">History</a></li>
+                        <li><a href="sightseeing.html">Sightseeing</a></li>
+                        <li><a href="otherAttractions.html">Other</a></li>
+                    </ul>
+                </li>
                 <li><a href="map.html">Map</a></li>
                 <li id="menu-icon" class="menu-trigger"><a><i class="fas fa-bars menu-icon"></i></a></li>
                 <li id="menu-close-icon" class="menu-close"><a><i class="fas fa-times close-icon"></i></a></li>
@@ -54,6 +65,7 @@
                     </li>
                     <li  class="menu-page-link"><a id="cabins-menu">Cabins <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
                         <ul id="cabin-sub-menu-pages"> 
+                            <li><a href="cabinOverview.html">Cabins Overview</a></li>
                             <li><a href="mainCabin.html">Main Cabin</a></li>
                             <li><a href="guestCabin.html">Guest Cabin</a></li>
                             <li><a href="otherEvents.html">Other Events</a></li>
@@ -99,7 +111,7 @@
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.trailforks.com/trails/pioneer-10808/" target="_blank"><h3>Pioneer Bike Trail</h3></a>
                     <p><i class="fas fa-route hiking-icon-left"></i> 3 miles<i class="fas fa-mountain hiking-icon"></i> -1,442 feet <span class="hiking-difficulty difficult-hike">&#9670;</span> Difficult</p>
-                    <p>This is an incredibly fun, primarily downhill singletrack trail that takes you through the thick of the forest and over wooden bridges with breathtaking views. We recommend combining this trail with the flume trail below.</p>
+                    <p>This is an incredibly fun, primarily downhill singletrack trail that takes you through the thick of the forest and over wooden bridges with breathtaking views. We recommend combining this trail with the Flume trail below.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="https://www.trailforks.com/trails/pioneer-10808/" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -114,7 +126,7 @@
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.trailforks.com/trails/flume/" target="_blank"><h3>Flume Trail</h3></a>
                     <p><i class="fas fa-route hiking-icon-left"></i> 2 miles<i class="fas fa-mountain hiking-icon"></i> -869 feet <span class="hiking-difficulty difficult-hike">&#9670;</span> Difficult</p>
-                    <p>This is a fun trail that starts flat and then is downhill on a windy dirt path. There are a few jumps on the sides for the adventurous spirit as well! Most people will combine this with the Pioneer Trail above.</p>
+                    <p>This is a fun trail that starts flat and then is downhill on a windy dirt singletrack path. There are a few jumps on the sides for the adventurous spirit as well! Most people will combine this with the Pioneer Trail above.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="https://www.trailforks.com/trails/flume/" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -140,6 +152,7 @@
             <ul>
                 <li><a href="https://www.trailforks.com/region/utah/" target="_blank">Trail Forks</a></li>
                 <li><a href="https://www.mtbproject.com/directory/8010491/utah" target="_blank">MTB project</a></li>
+                <li><a href="https://www.fs.usda.gov/activity/mantilasal/recreation/bicycling/?recid=72816&actid=24" target="_blank">Forest Service</a></li>
                 <li><a href="https://www.heraldextra.com/sanpete-county/special-section/rec-guide/explore-sanpete-s-numerous-backcountry-trails/article_3e6a51ad-e6e0-5577-b1c5-bbf169cf4085.html" target="_blank">Herald Extra</a></li>
                 <li><a href="http://sanpete.com/downloads/Bike%20Trails.pdf" target="_blank">Sanpete.com</a></li>
                 <li><a href="http://www.utahmountainbiking.com/idx-main.htm" target="_blank">Utah Mountain Biking</a></li>
