--- a/otherEvents.html
+++ b/otherEvents.html
@@ -10,7 +10,7 @@
 
     <body class="overview-page"> 
         <!-- Header -->
-        <nav style="background-color: rgba(255,255,255,1)">
+        <nav class="solid-header">
             <div class="logo-title-container">
                 <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
             </div>
@@ -32,7 +32,18 @@
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="availability.html">Availability</a></li>
-                <li><a href="attractions.html">Attractions</a></li>
+                <li><a href="attractions.html">Attractions <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
+                    <ul>
+                        <li><a href="atv.html">ATV</a></li>
+                        <li><a href="hiking.html">Hiking</a></li>
+                        <li><a href="rockClimbing.html">Rock Climbing</a></li>
+                        <li><a href="snowmobiling.html">Snowmobiling</a></li>
+                        <li><a href="mtnBiking.html">Mtn Biking</a></li>
+                        <li><a href="history.html">History</a></li>
+                        <li><a href="sightseeing.html">Sightseeing</a></li>
+                        <li><a href="otherAttractions.html">Other</a></li>
+                    </ul>
+                </li>
                 <li><a href="map.html">Map</a></li>
                 <li id="menu-icon" class="menu-trigger"><a><i class="fas fa-bars menu-icon"></i></a></li>
                 <li id="menu-close-icon" class="menu-close"><a><i class="fas fa-times close-icon"></i></a></li>
@@ -54,6 +65,7 @@
                     </li>
                     <li  class="menu-page-link"><a id="cabins-menu">Cabins <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
                         <ul id="cabin-sub-menu-pages"> 
+                            <li><a href="cabinOverview.html">Cabins Overview</a></li>
                             <li><a href="mainCabin.html">Main Cabin</a></li>
                             <li><a href="guestCabin.html">Guest Cabin</a></li>
                             <li><a href="otherEvents.html">Other Events</a></li>
@@ -76,7 +88,7 @@
             <div class="overview-text-container">
                 <div>
                     <h1>Weddings</h1><br>
-                    <p>Our cabins are a perfect location for your cabin or country-style wedding! With our large, grassy yard behind our two century old cabins, we have everything you need for your special day! With mountains one either side and both of our gorgeous cabins for your use, the only thing missing is you!<br><br>If this sounds like a perfect match for you and your big day, then contact us today to reserve your place and we can work with you to find a date that works! Contact us anytime at SheldonRLarsonRanch@gmail.com or by phone at (435)340-0075.</p>
+                    <p>Our cabins are a perfect location for your cabin or country-style wedding! With our large, grassy yard behind our two century old cabins, we have everything you need for your special day! With mountains one either side and both of our gorgeous cabins for your personal use, the only thing missing is you!<br><br>If this seems like a perfect match for you and your big day, then contact us to reserve your place and we can work with you to find a date that works! Contact us anytime at SheldonRLarsonRanch@gmail.com, by phone at (435)340-0075, or by using the <a href="contact.html">contact form</a> on our website.</p>
                 </div>
             </div>
 
@@ -114,7 +126,7 @@
             <div class="overview-text-container">
                 <div>
                     <h1>Group Events</h1><br>
-                    <p>Whether it's a youth group, camp, or family reunion, book our cabins for your event! We have everything you need to fit your group event here in the middle of gorgeous Sanpete Valley. With plenty of room for tents in our large yard behind the cabins and an extra large parking area for your RVs, you can rest assured knowing that the only thing you'll be needing is more time to spend here!<br><br>If it sounds like we can be a good fit for you and your group, then contact us and we can work with you to make sure your needs are met! Contact us anytime at SheldonRLarsonRanch@gmail.com or by phone at (435)340-0075.</p>
+                    <p>Whether it's a youth group, camp, or family reunion, book our cabins for your event! We have everything you need to fit your group event here in the middle of gorgeous Sanpete Valley. With plenty of room for tents in our large yard behind the cabins and an extra large parking area for your RVs, you can rest assured knowing that the only thing you'll be wanting is more time to spend here!<br><br>If it sounds like we can be a good fit for you and your group, then contact us and we can work with you to make sure your needs are met! Contact us anytime at SheldonRLarsonRanch@gmail.com, by phone at (435)340-0075, or by using the <a href="contact.html">contact form</a> on our website.</p>
                 </div>
             </div>
         </div>
@@ -124,9 +136,9 @@
 
             <div class="overview-overlay-container">
                 <a href="cabinOverview.html"><div class="overview-overlay"><p>Country<br>Cabins</p><p class="overview-overlay-underline"></p></div></a>
-                <a href="otherEvents.html"><div class="overview-overlay"><p>Great<br>Outdoors</p><p class="overview-overlay-underline"></p></div></a>
-                <a href=""><div class="overview-overlay"><p>Panoramic<br>Views</p><p class="overview-overlay-underline"></p></div></a>
-                <a href=""><div class="overview-overlay"><p>Rich<br>History</p><p class="overview-overlay-underline"></p></div></a>
+                <a href="attractions.html"><div class="overview-overlay"><p>Great<br>Outdoors</p><p class="overview-overlay-underline"></p></div></a>
+                <a href="sightseeing.html"><div class="overview-overlay"><p>Panoramic<br>Views</p><p class="overview-overlay-underline"></p></div></a>
+                <a href="history.html"><div class="overview-overlay"><p>Rich<br>History</p><p class="overview-overlay-underline"></p></div></a>
             </div>
             
             <img src="images/home-1.jpg" alt="">
