--- a/overview.html
+++ b/overview.html
@@ -10,7 +10,7 @@
 
     <body class="overview-page"> 
         <!-- Header -->
-        <nav style="background-color: rgba(255,255,255,1)">
+        <nav class="solid-header">
             <div class="logo-title-container">
                 <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
             </div>
@@ -32,7 +32,18 @@
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="availability.html">Availability</a></li>
-                <li><a href="attractions.html">Attractions</a></li>
+                <li><a href="attractions.html">Attractions <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
+                    <ul>
+                        <li><a href="atv.html">ATV</a></li>
+                        <li><a href="hiking.html">Hiking</a></li>
+                        <li><a href="rockClimbing.html">Rock Climbing</a></li>
+                        <li><a href="snowmobiling.html">Snowmobiling</a></li>
+                        <li><a href="mtnBiking.html">Mtn Biking</a></li>
+                        <li><a href="history.html">History</a></li>
+                        <li><a href="sightseeing.html">Sightseeing</a></li>
+                        <li><a href="otherAttractions.html">Other</a></li>
+                    </ul>
+                </li>
                 <li><a href="map.html">Map</a></li>
                 <li id="menu-icon" class="menu-trigger"><a><i class="fas fa-bars menu-icon"></i></a></li>
                 <li id="menu-close-icon" class="menu-close"><a><i class="fas fa-times close-icon"></i></a></li>
@@ -54,6 +65,7 @@
                     </li>
                     <li  class="menu-page-link"><a id="cabins-menu">Cabins <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
                         <ul id="cabin-sub-menu-pages"> 
+                            <li><a href="cabinOverview.html">Cabins Overview</a></li>
                             <li><a href="mainCabin.html">Main Cabin</a></li>
                             <li><a href="guestCabin.html">Guest Cabin</a></li>
                             <li><a href="otherEvents.html">Other Events</a></li>
@@ -78,7 +90,7 @@
                 <div>
                     <h6>Welcome to the<br>Sheldon R. Larson Ranch</h6><br>
                     <p class="test-text">The Sheldon R. Larson Ranch is located minutes from the famous Arapeen trail system, with world-class ATVing, snowmobiling, hiking, rock climbing, and more! 
-                    <br><br>This working ranch is located in the heart of the Sanpete Valley, three miles west of Ephraim, Utah, with easy access to mountains on the east and the west.
+                    <br><br>This working ranch is located in the heart of the Sanpete Valley, three miles west of Ephraim, Utah, with easy access to mountains on the east and west.
                     <br><br>Great for both summer and winter enthusiasts looking for a classic and fun cabin experience with easy access to world-class outdoors!</p>
                 </div>
             </div>
@@ -118,9 +130,9 @@
             <div class="overview-text-container">
                 <div>
                     <h1>The Great Outdoors</h1><br>
-                    <p>Imagine a quiet peaceful night by the fire, gazing at the stars after a day of four-wheeling, snowmobiling, or hiking, all while sitting on the front porch of your country cabin.
-                    <br><br>Our cabins are the gateway to the Manti-La Sal National Forest, Maple Canyon, the Arapeen trail system, and more! Ephraim is also an ATV-friendly town, meaning you can cruise through town on your ATV!
-                    <br><br>Bring your horses, ATVs, RVs, snowmobiles, or whatever else you need, we have plenty of room for you to park it. Although, with how close you will be to everything, we bet they won't spend much time parked!</p>
+                    <p>Imagine a quiet peaceful night by the fire, gazing at the stars from he front porch of your country cabin, all after a day of four-wheeling, snowmobiling, or hiking through arguably the prettiest mountain range in the country.
+                    <br><br>Our cabins are the gateway to the Manti-La Sal National Forest, Maple Canyon, Arapeen trail system, and more! Ephraim is also an ATV-friendly town, meaning you can cruise through town on your ATV!
+                    <br><br>Bring your horses, ATVs, RVs, snowmobiles, or whatever else you need, we have plenty of room for you to park them. Although, with how close you will be to everything, we bet your toys won't spend much time parked!</p>
                 </div>
             </div>
 
@@ -132,7 +144,7 @@
             <div class="overview-text-container">
                 <div>
                     <h1>Country Cabins</h1><br>
-                    <p>These country cabins are adjacent to Sheldon R. Larson Ranch, which is a working ranch and has been since 1854! As such, there is a small town country atmosphere around the cabins
+                    <p>These country cabins are adjacent to Sheldon R. Larson Ranch, which is a working ranch and has been since 1854! As such, there is a small country town atmosphere around the cabins
                     <br><br>There is a large lawn area for games, activities, tent camping, etc. You'll also find an outdoor fire pit, patio, balcony, barbecue grill, horseshoe pit, and more!
                     <br><br>Inside the cabins you'll feel right at home and ready to settle in. Both cabins have a loft-style second floor that opens up into the main living area, a full kitchen, bathroom with shower, and many more amenities you may need during your stay.</p>
                 </div>
@@ -172,7 +184,8 @@
                 <div>
                     <h1>History</h1><br>
                     <p>Step back 100 years to a simpler time and place. This working ranch is the homestead of Lewis Larsen, one of the original pioneers to arrive in Ephraim in 1854, and has been in the family every since.
-                    <br><br>Sanpete's Heritage is prevalent today with many rock homes and buildings built in the 1800's. Native American sites, pioneer homesteads, historic buildings, and cultural sites draw history and culture buffs to this area.</p>
+                    <br><br>Sanpete's Heritage is prevalent today with many rock homes and buildings built in the 1800's. Native American sites, pioneer homesteads, historic buildings, and cultural sites draw history and culture buffs to this area.
+                    <br><br>A nearly fully intact Columbian Mammoth unearthed only miles away, the small historic town of Spring City, Chief Blackhawk Massacre monument, and Manti Temple are just a few of the many historical sites scattered throughout our history-rich valley.</p>
                 </div>
             </div>
         </div>
@@ -188,8 +201,14 @@
                     <br><br>As always, please feel free to ask us any questions during your stay here! We're more than happy to help!</p>
                 </div>
             </div>
-            <div class="overview-hosts-image">
-                <img src="images/host-image.jpg" alt="">
+
+            <div class="cycle-slideshow slideshow-container-right overview-hosts-image" 
+                data-cycle-timeout="5000"
+                data-cycle-swipe=true>
+
+                <img class="overview-image-carousel-img" src="images/host_1.jpg" alt="">
+                <img class="overview-image-carousel-img" src="images/host_2.jpg" alt="">
+                <img class="overview-image-carousel-img" src="images/host-image.jpg" alt="">
             </div>
         </div>
 
@@ -198,9 +217,9 @@
 
             <div class="overview-overlay-container">
                 <a href="cabinOverview.html"><div class="overview-overlay"><p>Country<br>Cabins</p><p class="overview-overlay-underline"></p></div></a>
-                <a href="otherEvents.html"><div class="overview-overlay"><p>Great<br>Outdoors</p><p class="overview-overlay-underline"></p></div></a>
-                <a href=""><div class="overview-overlay"><p>Panoramic<br>Views</p><p class="overview-overlay-underline"></p></div></a>
-                <a href=""><div class="overview-overlay"><p>Rich<br>History</p><p class="overview-overlay-underline"></p></div></a>
+                <a href="attractions.html"><div class="overview-overlay"><p>Great<br>Outdoors</p><p class="overview-overlay-underline"></p></div></a>
+                <a href="sightseeing.html"><div class="overview-overlay"><p>Panoramic<br>Views</p><p class="overview-overlay-underline"></p></div></a>
+                <a href="history.html"><div class="overview-overlay"><p>Rich<br>History</p><p class="overview-overlay-underline"></p></div></a>
             </div>
             
             <img src="images/home-1.jpg" alt="">
