--- a/mainCabin.html
+++ b/mainCabin.html
@@ -10,7 +10,7 @@
 
     <body id="main-cabin-body">
         <!-- Header -->
-        <nav style="background-color: rgba(255,255,255,1)">
+        <nav class="solid-header">
             <div class="logo-title-container">
                 <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
             </div>
@@ -32,7 +32,18 @@
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="availability.html">Availability</a></li>
-                <li><a href="attractions.html">Attractions</a></li>
+                <li><a href="attractions.html">Attractions <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
+                    <ul>
+                        <li><a href="atv.html">ATV</a></li>
+                        <li><a href="hiking.html">Hiking</a></li>
+                        <li><a href="rockClimbing.html">Rock Climbing</a></li>
+                        <li><a href="snowmobiling.html">Snowmobiling</a></li>
+                        <li><a href="mtnBiking.html">Mtn Biking</a></li>
+                        <li><a href="history.html">History</a></li>
+                        <li><a href="sightseeing.html">Sightseeing</a></li>
+                        <li><a href="otherAttractions.html">Other</a></li>
+                    </ul>
+                </li>
                 <li><a href="map.html">Map</a></li>
                 <li id="menu-icon" class="menu-trigger"><a><i class="fas fa-bars menu-icon"></i></a></li>
                 <li id="menu-close-icon" class="menu-close"><a><i class="fas fa-times close-icon"></i></a></li>
@@ -54,6 +65,7 @@
                     </li>
                     <li  class="menu-page-link"><a id="cabins-menu">Cabins <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
                         <ul id="cabin-sub-menu-pages"> 
+                            <li><a href="cabinOverview.html">Cabins Overview</a></li>
                             <li><a href="mainCabin.html">Main Cabin</a></li>
                             <li><a href="guestCabin.html">Guest Cabin</a></li>
                             <li><a href="otherEvents.html">Other Events</a></li>
@@ -74,7 +86,7 @@
 
         <div class="overview-container">
             <h1>Main Cabin</h1>
-            <p>Plenty of room for the entire family in this Country Cabin rental!</p>
+            <p class="main-cabin-short">Plenty of room for the entire family in this Country Cabin rental!</p>
             <div class="cabin-overview-icon-container">
                 <p><i class="fas fa-user-friends cabin-overview-icon cabin-overview-icon-right"></i> 6</p> 
                 <p><i class="fas fa-bed cabin-overview-icon cabin-overview-icon-right"></i> 4</p>
@@ -114,19 +126,19 @@
 
             <div class="cabin-description-text-area">
                 <h2 id="main-cabin-description">Description</h2>
-                <p>The Sheldon R. Larson Ranch is located in the heart of the Sanpete Valley, four miles west of Ephraim. This working ranch is located minutes from the famous Arapeen trail system, with world-class ATVing, snowmobiling, hiking, and rock climbing. Great for both summer and winter enthusiasts looking for a classic and fun cabin experience with easy access to world-class outdoors!</p>
+                <p>The Sheldon R. Larson Ranch is located in the heart of the beautiful Sanpete Valley, three miles west of Ephraim. This working ranch is located minutes from the famous Arapeen trail system, with world-class ATVing, snowmobiling, hiking, and rock climbing. Great for both summer and winter enthusiasts looking for a classic and fun cabin experience with easy access to world-class outdoors!</p>
                 <h2 id="main-cabin-theSpace">The Space</h2>
-                <p>The main cabin has a master bedroom with a king-sized bed on the ground floor. There is also a large loft area, accessible by ladder stairs, which overlooks the living room and has 3 beds (a queen and 2 single-sized beds), balcony access, and plenty of room!</p>
-                <p>Enjoy quiet peaceful nights by the fire after a day of four-wheeling, snowmobiling, hiking, fishing, horseback riding or sightseeing in the nearby national forest. Enjoy easy access to the many ATV trails in the Arapeen trail system accessible from your doorstep.</p>
+                <p>The main cabin has a master bedroom with a king-sized bed on the ground floor. On the ground floor this is also a full ktichen and dining room, living room with a TV, and bathroom with a large jacuzzi style tub and shower! There is also a large loft area, accessible by ladder stairs, which overlooks the living room and has 3 beds (a queen and 2 single-sized beds), balcony access, and plenty of extra room!</p>
+                <p>The spacious accommodations of the ranch offer plenty of parking for all the toys (RV, Campers, trailers, etc). There is a beautiful lawn for tent camping and large groups. Horse corrals are available for boarding if desired. Both are available with prior arrangement and additional camping/boarding fees.</p>
+                <p>Enjoy quiet peaceful nights on the patio next to the firepit after a day of four-wheeling, snowmobiling, hiking, fishing, horseback riding or sightseeing in the nearby Manti-La Sal National Forest. Experience easy access to the hundreds of ATV trails in the Arapeen trail system accessible from your front doorstep.</p>
                 <p>Conveniently located near Ephraim and Manti, it is the gateway to the Manti-La Sal National Forest and other local attractions for both outdoor adventurists and those who want to enjoy the many quaint historical sites the Sanpete Valley has to offer.</p>
-                <p>The spacious accommodations of the ranch offer plenty of parking for all the toys (RV, Campers, toy haulers, etc). There is a beautiful lawn for tent camping and large groups. Horse corrals are available for boarding if desired. Both are available with prior arrangement and additional camping/boarding fees.</p>
                 <h2 id="main-cabin-guestAccess">Guest Access</h2>
-                <p>You will have access to the entire cabin and the surrounding area. There is a fire pit, lawn area, and horseshoe pit available for all guests. We are on a working ranch, so there are live animals in the corrals.</p>
+                <p>You will have access to the entire cabin and the surrounding area. There is a fire pit, lawn area, and horseshoe pit available for all guests. We are on a working ranch, so there are live animals in the corrals. We kindly ask that you stay out of the animal corrals and away from any ranch equipment. However, upon request, we would love to show you around our ranch and introduce you to some of our livestock, including our rodeo bucking bulls!</p>
                 <h2 id="main-cabin-location">Location</h2>
                 <h4>The Neighborhood</h4>
                 <p>These cabins are located outside a small town and are very quiet and secluded with mountains on the east and west. We are located on a working ranch so there are farm animals on neighboring property.</p>
                 <h4>Getting Around</h4>
-                <p>There is plenty of parking for your cars, trailers, ATVs, snowmobiles, etc. Ephraim is an ATV friendly town, meaning you can also ride your ATVs through the city!</p>
+                <p>There is plenty of parking for your cars, trailers, ATVs, snowmobiles, etc. at our ranch. The towns in Sanpete county are known as "ATV friendly", meaning you can ride through town (except for on highway 89) on your ATV, giving you the convenience of starting and ending from your front doorstep! Please note that the speed limit on city streets is 15mph.</p>
                 <h2 id="main-cabin-amenities">Amenities</h2>
                 <div class="amenities-container">
                     <p class="amenities">- A/C</p>
@@ -154,18 +166,18 @@
                 </div>
                 <h2 id="main-cabin-information">Information</h2>
                 <h4>Check-In/Check-Out</h4>
-                <p>You may check-in anytime after 3:00pm on the day of your first stay. We ask that you are checked-out by 11:00am after your last night so that we can clean the cabins before our next guests arrive!</p>
+                <p>You may check-in anytime after 3:00pm on the day of your check-in. We ask that you are checked-out by 11:00am after your last night so that we can clean the cabins before our next guests arrive!</p>
                 <p>Upon check-in we will give you a key to the cabin. Once you are ready to check-out simply leave the key on the dining room table and our cleaners will grab the key once you've checked out!</p>
                 <h4>Refund/Payment</h4>
                 <p>25% of payment is required to reserve your booking. This is a non-refundable security and cleaning deposit. The other 75% is due upon arrival at the cabins.</p>
                 <h4>Pet Policy</h4>
-                <p>We do allow pets at our cabins! There is a large lawn and courtyard area for the pets to run free. There is also a fenced in area on the soutch side of the main cabin that the dogs may use. We do require that you clean up after your pets.</p>
+                <p>We do allow pets at our cabins! There is a large lawn and courtyard area for the pets to run free. There is also a fenced in area on the soutch side of the main cabin that the dogs may use. We do require that you clean up after your pets!</p>
                 <p>Your pets may stay in the cabins but require that pets are not allowed on any furniture and may not "rough-house" inside the cabins. At night we do ask that your pets are placed in a kennel while you sleep. Please help us by abiding by this policy so that other guests can enjoy our cabins. These cabins have been in our family for over 100 years and we try everything we can to ensure the history and experience can be preserved for all our guests to enjoy!</p>
                 <p>There is an additional $20/night charge added for each pet. This helps us cover the additional cleaning required so that our cabins may be clean for the next guests!</p>
                 <h4>Damage Policy</h4>
                 <p>We don't want any part of our timeless cabins to be damaged and we know you don't want or intend to damage our property. That being said, we know accidents and damages do happen. You will be required to pay for any intentional damage or defacing of property caused by any member (or pets) in your party. For other damages of property, we will work with you on a case by case basis. Since our cabins have been in the family for over 100 years, there are pieces in our cabin that cannot be replaced. But of course, we know you'll do your best to treat it as your own!</p>
                 <h4>Large Groups</h4>
-                <p>We do allow group events at our cabins. If you have a large group and want to rent our cabins we do ask that you contact us directly at sheldonrlarsonranch@gmail.com or by phone at (435)340-0075 to book. For large groups you must rent out both the main and guest cabin. There is an additional $5/guest for each guest above our cabin capacity of 10. There is a large lawn area that we do allow groups to pitch tents to accomodate this additional capacity. There is also extra parking available for RVs and campers if desired.</p>
+                <p>We do allow group events at our cabins. Whether it's a family reunion, youth camp, wedding, etc., if you have a large group and want to rent our cabins we do ask that you contact us directly at SheldonRLarsonRanch@gmail.com or by phone at (435)340-0075 to book. For large groups you must rent out both the main and guest cabin. There is an additional $5/guest per night for each guest above our cabin capacity of 10 (Pricing for weddings we'll be worked out with you personally). There is a large lawn area that we do allow groups to pitch tents to accomodate this additional capacity. There is also extra parking available for RVs, camper, and trailers if desired.</p>
                 <h2 id="main-cabin-rates">Rates</h2>
                 <table class="rates-table">
                     <tr>
